tests/integration/fail/maps_key_not_found.kr
# Test error when accessing non-existent map key

set m to map name: "Alice"
print m at "nonexistent"
# Expected: Runtime error - Map key not found

